Add iframe to mailchimp sign up form

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Coming soon...
+<html>
+<head>
+	<style>
+	html, body, iframe {
+		width: 100%;
+		height: 100%;
+		padding: 0;
+		margin: 0;
+		border: 0;
+	}
+	</style>
+</head>
+<body>
+<iframe src="https://mailchi.mp/4ebc0abad765/register-your-interest-best-gifts-for-golfers"></iframe>
+</body>
+</html>
